--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,6 +7,7 @@
 <body>
     <div class="container">
         <h1>Sign up form for Library Member</h1>
+	<img src="/images/book1.jpeg" alt="Image 1">
         <form action="/register" method="POST" class="form-table">
              <table>
                 <tr>
