--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,6 +6,7 @@
 </head>
 <body>
     <div class="container">
+	<img src="/images/book1.jpeg" alt="Image 1">
         <h1>Member login</h1>
         <form action="/login" method="POST">
             <table>
