--- a/views/admin-login.ejs
+++ b/views/admin-login.ejs
@@ -6,6 +6,7 @@
 </head>
 <body>
  <div class="container">
+    <img src="/images/book1.jpeg" alt="Image 1">
     <h1>Admin Login</h1>
     <form action="/admin-login" method="post">
         <table>
