--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="/css/admindash.css">
+    <link rel="stylesheet" type="text/css" href="/css/admindash.css">
     <title>Admin Dashboard</title>
 </head>
 <body>
     
-    <div class="container">
-	<h1>Create Book Detail</h1>
+    <div class="container">        
         <form action="/admin-dashboard/add-book" method="post">
             <table>
+		<tr>
+                    <td><img src="/images/book1.jpeg" alt="Image 1" class="left-image"></td>
+                    <td><h1>Create Book Detail</h1></td>
+                </tr>
                 <tr>
                     <td><label for="Book_id">BookID:</label></td>
                     <td><input type="number" name="Book_id" required autocomplete="off"></td>
@@ -34,10 +37,11 @@
                     <td><label for="Book_type">Book Type:</label></td>
                     <td><input type="text" name="Book_type" required autocomplete="off"></td>
                 </tr>
-                <tr>
-                    <td colspan="2"><button type="submit">Add Book</button></td>
-                </tr>
             </table>
+            
+            <div class="center-button-container">
+                <button class="center-button" type="submit">Add Book</button>
+            </div>
         </form>
     </div>
     <p><a href="/logout">Logout</a></p>
